new normalized syntax RIGHT IMPLEMENTATION SMART SUM

--- a/72_2D_MFPADs_experiment.ipynb
+++ b/72_2D_MFPADs_experiment.ipynb
@@ -201,11 +201,11 @@
     "ctheta_axis_red=ctheta_axis_red[0]; #Ffrom ccos(theta)\n",
     "\n",
     "phiM=(MFPAD_axis[0][0][1:] + MFPAD_axis[0][0][:-1])/2 #phi = (36,), MFPAD_axis = (37,)\n",
-    "cosM=(MFPAD_axis[0][1][1:] + MFPAD_axis[0][1][:-1])/2 #COS = (36,), MFPAD_axis = (37,)\n",
+    "cosM=(MFPAD_axis[0][1][1:] + MFPAD_axis[0][1][:-1])/2 #cos = (18,), MFPAD_axis = (19,)\n",
     "\n",
     "print(\"MFPAD_xy shape = \", MFPAD_axis[0][0].shape)\n",
     "print(\"phiM shape = \", phiM.shape)\n",
-    "print(\"cosM shape = \", cosM.shape)\n",
+    "print(\"cosM shape = \", cosM.shape, \", cosM[0] = \",cosM[0])\n",
     "\n",
     "dfind=pd.DataFrame(cosphi_adj_phi, columns=[\"ctheta\",\"phi\"])"
    ]
@@ -217,16 +217,16 @@
    "outputs": [],
    "source": [
     "#normalising entries, important just for PECD\n",
-    "MFPAD_RCR_norm = fugi.normalise_with_err(MFPAD_RCR,err=0,normtype=2) # z values normalise to number of event\n",
-    "MFPAD_RCL_norm = fugi.normalise_with_err(MFPAD_RCL,err=0,normtype=2) # z values normalise to number of event\n",
-    "cosx_RCR_norm = fugi.normalise_with_err(cosx_RCR,err=0,normtype=2) # z values normalise to number of event\n",
-    "cosx_RCL_norm = fugi.normalise_with_err(cosx_RCL,err=0,normtype=2) # z values normalise to number of event\n",
+    "MFPAD_RCR_norm = fugi.normalise_with_err(MFPAD_RCR) # z values normalise to number of event\n",
+    "MFPAD_RCL_norm = fugi.normalise_with_err(MFPAD_RCL) # z values normalise to number of event\n",
+    "cosx_RCR_norm = fugi.normalise_with_err(cosx_RCR) # z values normalise to number of event\n",
+    "cosx_RCL_norm = fugi.normalise_with_err(cosx_RCL) # z values normalise to number of event\n",
     "\n",
     "if fileSCL and fileSCR is not None:\n",
-    "    MFPAD_SCR_norm = fugi.normalise_with_err(MFPAD_SCR,err=0,normtype=2) # z values normalise to number of event\n",
-    "    MFPAD_SCL_norm = fugi.normalise_with_err(MFPAD_SCL,err=0,normtype=2) # z values normalise to number of event\n",
-    "    cosx_SCR_norm = fugi.normalise_with_err(cosx_SCR,err=0,normtype=2) # z values normalise to number of event\n",
-    "    cosx_SCL_norm = fugi.normalise_with_err(cosx_SCL,err=0,normtype=2) # z values normalise to number of event"
+    "    MFPAD_SCR_norm = fugi.normalise_with_err(MFPAD_SCR) # z values normalise to number of event\n",
+    "    MFPAD_SCL_norm = fugi.normalise_with_err(MFPAD_SCL) # z values normalise to number of event\n",
+    "    cosx_SCR_norm = fugi.normalise_with_err(cosx_SCR) # z values normalise to number of event\n",
+    "    cosx_SCL_norm = fugi.normalise_with_err(cosx_SCL) # z values normalise to number of event"
    ]
   },
   {
@@ -352,19 +352,21 @@
    "outputs": [],
    "source": [
     "#smart flipping for the single 72 MFPAD image. Has to be in phi because of the structure of reshape, do the cos just as a check\n",
-    "MFPAD_RCLCR=[]\n",
+    "temp_RCLCR=np.empty([12,6,648])\n",
+    "temp_SCLCR=np.empty([12,6,648])\n",
+    "temp_totordered_phi=np.empty([12,6,648])\n",
+    "\n",
     "nphi=MFPAD_RCL.shape[1];ncos=MFPAD_RCL.shape[2]\n",
     "\n",
     "#sum helicities: -cos(theta), phi+180 in photon coordiantes\n",
     "for j in range(12):\n",
     "    for i in range(6):\n",
     "        if j>5:\n",
-    "            MFPAD_RCLCR.append(np.add(MFPAD_RCL_phi.reshape(6,12,-1)[i,j],MFPAD_RCR_phi.reshape(6,12,-1)[5-i,j-6]))\n",
-    "            i+=1\n",
+    "            temp_RCLCR[j,i]=np.add(MFPAD_RCL_phi.reshape(12,6,-1)[j,i],MFPAD_RCR_phi.reshape(12,6,-1)[j-6,5-i])\n",
     "        else:\n",
-    "            MFPAD_RCLCR.append(np.add(MFPAD_RCL_phi.reshape(6,12,-1)[i,j],MFPAD_RCR_phi.reshape(6,12,-1)[5-i,6+j]))\n",
-    "            i+=1\n",
-    "MFPAD_RCLCR=np.array(MFPAD_RCLCR).reshape(72,nphi,ncos)\n",
+    "            temp_RCLCR[j,i]=np.add(MFPAD_RCL_phi.reshape(12,6,-1)[j,i],MFPAD_RCR_phi.reshape(12,6,-1)[6+j,5-i])\n",
+    "\n",
+    "MFPAD_RCLCR=np.array(temp_RCLCR).reshape(72,nphi,ncos)\n",
     "MFPAD_RCLCR_sum=np.sum(MFPAD_RCLCR, axis=0)\n",
     "\n",
     "#sorting\n",
@@ -373,23 +375,22 @@
     "\n",
     "#reverse the cos of every MFPAD: JUST ALONG COS(theta) -> axis=1\n",
     "temp1=[]\n",
-    "for el in MFPAD_RCLCR_phi:\n",
+    "for el in temp_RCLCR:\n",
     "    temp1.append(np.flip(el,axis=1))\n",
-    "MFPAD_RCLCR_phi_flip=np.array(temp1).reshape(72,nphi,ncos)\n",
+    "temp_RCLCR_flip=np.array(temp1).reshape(12,6,-1)\n",
     "\n",
     "if fileSCL and fileSCR is not None:\n",
-    "    MFPAD_SCLCR=[]\n",
-    "    MFPAD_totordered=[]\n",
+    "    temp_SCLCR=[]\n",
+    "    temp_totordered=[]\n",
     "    nphi=MFPAD_SCL.shape[1];ncos=MFPAD_SCL.shape[2]\n",
-    "    #sum helicities: -cos(theta), phi+180 in photn coordiantes\n",
+    "    #sum helicities: -cos(theta), phi+180 in photon coordiantes\n",
     "    for j in range(12):\n",
     "        for i in range(6):\n",
     "            if j>5:\n",
-    "                MFPAD_SCLCR.append(np.add(MFPAD_SCL_phi.reshape(6,12,-1)[i,j],MFPAD_SCR_phi.reshape(6,12,-1)[5-i,j-6]))\n",
-    "                i+=1\n",
+    "                temp_SCLCR[j,i]=np.add(MFPAD_SCL_phi.reshape(12,6,-1)[j,i],MFPAD_SCR_phi.reshape(12,6,-1)[j-6,5-i])\n",
     "            else:\n",
-    "                MFPAD_SCLCR.append(np.add(MFPAD_SCL_phi.reshape(6,12,-1)[i,j],MFPAD_SCR_phi.reshape(6,12,-1)[5-i,6+j]))\n",
-    "                i+=1\n",
+    "                temp_SCLCR[j,i]=np.add(MFPAD_SCL_phi.reshape(12,6,-1)[j,i],MFPAD_SCR_phi.reshape(12,6,-1)[6+j,5-i])\n",
+    "    \n",
     "    MFPAD_SCLCR=np.array(MFPAD_SCLCR).reshape(72,nphi,ncos)\n",
     "    MFPAD_SCLCR_sum=np.sum(MFPAD_SCLCR, axis=0)\n",
     "\n",
@@ -400,10 +401,9 @@
     "    #sum enantiomer: -cos(theta) fliped axis=1 cos!, -cos(theta) photon coordinates\n",
     "    for j in range(12):\n",
     "        for i in range(6):\n",
-    "            MFPAD_totordered.append(np.add(MFPAD_SCLCR_phi.reshape(6,12,nphi,ncos)[i,j],MFPAD_RCLCR_phi_flip.reshape(6,12,nphi,ncos)[5-i,j]))\n",
-    "            i+=1\n",
+    "            temp_totordered[j,i]=np.add(temp_SCLCR[j,i],temp_RCLCR_flip[j,5-i])\n",
     "\n",
-    "    MFPAD_totordered=np.array(MFPAD_totordered).reshape(72,nphi,ncos)\n",
+    "    MFPAD_totordered=np.array(temp_totordered).reshape(72,nphi,ncos)\n",
     "    \n",
     "    #sorting\n",
     "    MFPAD_totordered_cos=fugi.sorting_array(MFPAD_totordered, theory=False, a=1)\n",
@@ -426,9 +426,11 @@
     "    #simulates the S enantiomer\n",
     "    #the cos of every MFPAD has to be reversed JUST ALONG COS(theta) -> axis=1\n",
     "    temp2=[]\n",
-    "    for el in MFPAD_RCLCR:\n",
+    "    for el in temp_RCLCR:\n",
     "        temp2.append(np.flip(el,axis=1))\n",
+    "    \n",
     "    MFPAD_totordered_flip=np.array(temp2).reshape(72,nphi,ncos)\n",
+    "    \n",
     "    MFPAD_totordered_cos=MFPAD_RCLCR_cos\n",
     "    MFPAD_totordered_phi=MFPAD_RCLCR_phi\n",
     "\n",
