updated and working

--- a/3D_MFPADs_experimnents.ipynb
+++ b/3D_MFPADs_experimnents.ipynb
@@ -82,7 +82,7 @@
     "\n",
     "#move first the ID you need\n",
     "IDs = [\"ID_ALL_mol_e0_valid/EN_gate/\",\"ID1_mol_e0_valid/EN_gate/\",\"ID2_mol_e0_valid/EN_gate/\",\"ID3_mol_e0_valid/EN_gate/\"]\n",
-    "dirs = [\"MFPADs_multinew\",\"MFPADs_multinew_phi\"]\n",
+    "dirs = [\"MFPADs_multinew/\",\"MFPADs_multinew_phi/\"]\n",
     "\n",
     "loc=path+IDs[0]+dirs[0]\n",
     "\n",
@@ -114,12 +114,42 @@
    "outputs": [],
    "source": [
     "#Loading of the MFPADS and cos len = 27\n",
-    "MFPAD_RCR,ctheta_RCR,cosphi_photon,MFPAD_axis,ctheta_axis,ctheta_axis_red=fugi.import_MFPAD(fileRCR, loc, full=True)\n",
-    "MFPAD_RCL,ctheta_RCL=fugi.import_MFPAD(fileRCL, loc)\n",
+    "MFPAD_RCR,ctheta_RCR,ctheta_RCR_err,cosphi_photon,MFPAD_axis,ctheta_axis,ctheta_axis_red=fugi.import_MFPAD(fileRCR, loc, full=True)\n",
+    "MFPAD_RCL,ctheta_RCL,ctheta_RCL_err=fugi.import_MFPAD(fileRCL, loc)\n",
+    "#projection of cos on x axis: len = 18\n",
+    "cosx_RCR=fugi.projection(MFPAD_RCR,alongaxis=0)\n",
+    "cosx_RCL=fugi.projection(MFPAD_RCL,alongaxis=0)\n",
     "\n",
     "if fileSCL and fileSCR is not None:    \n",
-    "    MFPAD_SCR,ctheta_SCR=fugi.import_MFPAD(fileSCR, loc)\n",
-    "    MFPAD_SCL,ctheta_SCL=fugi.import_MFPAD(fileSCL, loc)"
+    "    MFPAD_SCR,ctheta_SCR,ctheta_SCR_err=fugi.import_MFPAD(fileSCR, loc)\n",
+    "    MFPAD_SCL,ctheta_SCL,ctheta_SCL_err=fugi.import_MFPAD(fileSCL, loc)\n",
+    "    #projection of cos on x axis\n",
+    "    cosx_SCR=fugi.projection(MFPAD_SCR,alongaxis=0)\n",
+    "    cosx_SCL=fugi.projection(MFPAD_SCL,alongaxis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##########################b1 map x,y coordiantes###############################\n",
+    "\"\"\"\n",
+    "PHI - CTHETA photon with respect to the LF (in sperical coordinates)\n",
+    "NOTE the go coordiantes are organised accordinf to the SORTED MFPAD, therefore cos(theta)=[-1,1]\n",
+    "REDUCED=TRUE => ADJUSTED TO EXPERIMENT: -0.835,0.835,-165,165\n",
+    "REDUCED=FALSE => ADJUSTED TO THEORY: -1,1,-180,180\n",
+    "\"\"\"\n",
+    "# fugi = reload(fugi)\n",
+    "\n",
+    "xgo_phi,ygo_phi,cosphi_adj_phi = fugi.create_gocoords(a=0, reduced=True, source=True)\n",
+    "xgo_cos,ygo_cos,cosphi_adj_cos = fugi.create_gocoords(a=1, reduced=True, source=True)\n",
+    "\n",
+    "# list(zip(xgo_phi,ygo_phi))\n",
+    "print(\"(xgo_cos (phi), ygo_cos (ctheta)) \\n\", list(zip(xgo_cos,ygo_cos))[:6])\n",
+    "print(\"\\n cosphi_adj_cos  \\n\", cosphi_adj_cos[:6])\n",
+    "print(\"\\n cosphi_adj_phi \\n\", cosphi_adj_phi[:6])"
    ]
   },
   {
@@ -130,54 +160,18 @@
    "source": [
     "#COORDIANTES PHOTON ROTATION\n",
     "#adjusting cosphi with a shifting to have it equal to theory\n",
-    "#before sorting it is natuarally cos sorted from experiment\n",
-    "cosphi_adj=[]\n",
-    "ctheta_axis_red=ctheta_axis_red[0];\n",
+    "ctheta_axis_red=ctheta_axis_red[0]; #Ffrom ccos(theta)\n",
     "\n",
-    "phiM=(MFPAD_axis[0][0][1:] + MFPAD_axis[0][0][:-1])/2\n",
-    "cosM=(MFPAD_axis[0][1][1:] + MFPAD_axis[0][1][:-1])/2\n",
+    "phiM=(MFPAD_axis[0][0][1:] + MFPAD_axis[0][0][:-1])/2 #phi = (36,), MFPAD_axis = (37,)\n",
+    "cosM=(MFPAD_axis[0][1][1:] + MFPAD_axis[0][1][:-1])/2 #cos = (18,), MFPAD_axis = (19,)\n",
     "\n",
-    "#cartesian product of unique values, (288,2) each\n",
-    "phicos_MFPAD = np.array(list(itertools.product(phiM, cosM)))\n",
-    "cosphi_MFPAD = np.array(list(itertools.product(cosM, phiM)))\n",
-    "\n",
-    "#(288,1) for each\n",
-    "ctheta_full = np.array([col[0] for col in cosphi_MFPAD])\n",
-    "theta_rad = np.arccos(ctheta_full)\n",
-    "\n",
-    "phi_full = np.array([col[1] for col in cosphi_MFPAD])\n",
-    "phi_rad = phi_full * np.pi/180.\n",
-    "\n",
-    "#effective dimensions to avoid retyping\n",
-    "c=cosM.shape[0]\n",
-    "p=phiM.shape[0]\n",
+    "theta\n",
     "\n",
     "print(\"MFPAD_xy shape = \", MFPAD_axis[0][0].shape)\n",
     "print(\"phiM shape = \", phiM.shape)\n",
-    "print(\"cosM shape = \", cosM.shape)\n",
+    "print(\"cosM shape = \", cosM.shape, \", cosM[0] = \",cosM[0])\n",
     "\n",
-    "print(\"cosphi diagnostic: type=\",type(cosphi_photon), \" shape= \", cosphi_photon.shape)\n",
-    "\n",
-    "cos_adj=fugi.shift_func(cosphi_photon[:,0]).tolist();\n",
-    "phi_adj=fugi.shift_func(cosphi_photon[:,1]).tolist();\n",
-    "\n",
-    "for cos,phi in zip(cos_adj,phi_adj):\n",
-    "    cosphi_adj.append((cos,phi))\n",
-    "cosphi_adj=np.around(np.array(cosphi_adj),3)\n",
-    "\n",
-    "print(\"cosphi_adj: type=\",type(cosphi_adj), \" shape= \", cosphi_adj.shape)\n",
-    "\n",
-    "print(cosphi_adj[0][0])\n",
-    "#look to the values in b1 map and found the MFPAD\n",
-    "\n",
-    "dfind=pd.DataFrame(cosphi_adj, columns=[\"ctheta\",\"phi\"])\n",
-    "\n",
-    "#rearranging the photon vector\n",
-    "cosphi_adj_cos=(dfind.sort_values(by=[\"ctheta\", \"phi\"])).values\n",
-    "cosphi_adj_phi=(dfind.sort_values(by=[\"phi\",\"ctheta\"])).values\n",
-    "\n",
-    "xgo_phi,ygo_phi,cosphi_adj_phic = fugi.create_gocoords(a=0, reduced=True, source=True)\n",
-    "xgo_cos,ygo_cos,cosphi_adj_cosc = fugi.create_gocoords(a=1, reduced=True, source=True)"
+    "dfind=pd.DataFrame(cosphi_adj_phi, columns=[\"ctheta\",\"phi\"])"
    ]
   },
   {
@@ -186,53 +180,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import 3d graph kilian\n",
-    "MFPAD_RCLtest=fugi.import_MFPAD3D(fileRCL, loc)\n",
-    "MFPAD_RCRtest=fugi.import_MFPAD3D(fileRCR, loc)\n",
+    "#flipping; axis=1 flips along cos(theta), axis=0 along phi\n",
+    "MFPAD_RCL_flip=[]\n",
+    "MFPAD_RCR_flip=[]\n",
     "\n",
-    "#sum\n",
-    "MFPAD_RCLtest_sum=np.sum(MFPAD_RCLtest,axis=0)\n",
-    "MFPAD_RCRtest_sum=np.sum(MFPAD_RCRtest,axis=0)\n",
+    "#flipping sorted S enantiomer for R enantiomer: JUST ALONG COS(theta) -> axis=1\n",
+    "for el in MFPAD_RCL:\n",
+    "    MFPAD_RCL_flip.append(np.flip(el, axis=1))\n",
+    "MFPAD_RCL_flip=np.array(MFPAD_RCL_flip)\n",
     "\n",
-    "#normalise each and sum\n",
-    "# MFPAD_RCLtest_sum=np.sum(fugi.normalise_matrix(MFPAD_RCLtest),axis=0)\n",
-    "# MFPAD_RCRtest_sum=np.sum(fugi.normalise_matrix(MFPAD_RCRtest),axis=0)\n",
-    "MFPAD_Rtest_sum = np.add(MFPAD_RCLtest_sum,MFPAD_RCRtest_sum)\n",
-    "\n",
-    "if fileSCL and fileSCR is not None:\n",
-    "    MFPAD_SCRtest=fugi.import_MFPAD3D(fileSCR, loc)\n",
-    "    MFPAD_SCLtest=fugi.import_MFPAD3D(fileSCL, loc)\n",
-    "    MFPAD_SCRtest_sum=np.sum(MFPAD_SCRtest,axis=0)\n",
-    "    MFPAD_SCLtest_sum=np.sum(MFPAD_SCLtest,axis=0)\n",
-    "\n",
-    "    # MFPAD_SCLtest_sum=np.sum(fugi.normalise_matrix(MFPAD_SCLtest),axis=0)\n",
-    "    # MFPAD_SCRtest_sum=np.sum(fugi.normalise_matrix(MFPAD_SCRtest),axis=0)\n",
-    "\n",
-    "    #flip along cos(theta)\n",
-    "    MFPAD_SCLtest_flip_sum=np.flip(MFPAD_SCLtest_sum,axis=0)\n",
-    "    MFPAD_SCRtest_flip_sum=np.flip(MFPAD_SCRtest_sum,axis=0)\n",
-    "    MFPAD_Stest_sum = np.add(MFPAD_SCLtest_flip_sum,MFPAD_SCRtest_flip_sum)\n",
-    "\n",
-    "    MFPAD_tottest=np.add(MFPAD_Stest_sum,MFPAD_Rtest_sum)\n",
-    "\n",
-    "    print(MFPAD_tottest.shape)\n",
-    "else:\n",
-    "    MFPAD_tottest=MFPAD_Rtest_sum"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#normalising entries, important just for PECD\n",
-    "MFPAD_RCR_norm = fugi.normalise_matrix(MFPAD_RCR,normtype=2) # z values normalise to number of event\n",
-    "MFPAD_RCL_norm = fugi.normalise_matrix(MFPAD_RCL,normtype=2) # z values normalise to number of event\n",
+    "#flipping sorted S enantiomer for R enantiomer: JUST ALONG COS(theta) -> axis=1\n",
+    "for el in MFPAD_RCR:\n",
+    "    MFPAD_RCR_flip.append(np.flip(el, axis=1))\n",
+    "MFPAD_RCR_flip=np.array(MFPAD_RCR_flip)\n",
     "\n",
     "if fileSCL and fileSCR is not None:\n",
-    "    MFPAD_SCR_norm = fugi.normalise_matrix(MFPAD_SCR,normtype=2) # z values normalise to number of event\n",
-    "    MFPAD_SCL_norm = fugi.normalise_matrix(MFPAD_SCL,normtype=2) # z values normalise to number of event\n"
+    "    MFPAD_SCL_flip=[]\n",
+    "    MFPAD_SCR_flip=[]\n",
+    "\n",
+    "    for el in MFPAD_SCL:\n",
+    "        MFPAD_SCL_flip.append(np.flip(el, axis=1))\n",
+    "    MFPAD_SCL_flip=np.array(MFPAD_SCL_flip)\n",
+    "\n",
+    "    for el in MFPAD_SCR:\n",
+    "        MFPAD_SCR_flip.append(np.flip(el, axis=1))\n",
+    "    MFPAD_SCR_flip=np.array(MFPAD_SCR_flip)    "
    ]
   },
   {
@@ -293,8 +265,10 @@
     "    #sum of two enantiomers: there is no influence of the ellicity\n",
     "    MFPAD_tot_sumt=MFPAD_RCR_sum+MFPAD_RCL_sum+MFPAD_SCR_flip_sum+MFPAD_SCL_flip_sum #bug?\n",
     "    MFPAD_tot_sum=np.add(MFPAD_R_sum,MFPAD_S_sum)\n",
+    "    MFPAD_tot_sum_norm=fugi.normalise_with_err(MFPAD_tot_sum)\n",
     "else:\n",
-    "    MFPAD_tot_sum=MFPAD_R_sum"
+    "    MFPAD_tot_sum=MFPAD_R_sum\n",
+    "    MFPAD_tot_sum_norm=fugi.normalise_with_err(MFPAD_tot_sum)"
    ]
   },
   {
@@ -334,83 +308,94 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#smart flipping for the single 72 MFPAD image. Has to be in cos, do the phi just as a check\n",
-    "MFPAD_RCLCR=[]\n",
+    "#smart flipping for the single 72 MFPAD image. Has to be in phi because of the structure of reshape, do the cos just as a check\n",
+    "temp_RCLCR=np.empty([12,6,648])\n",
+    "temp_totordered=np.empty([12,6,648])\n",
+    "temp_totordered1=np.empty([12,6,648]) #test on the sum of two enantiomers\n",
+    "\n",
+    "nphi=MFPAD_RCL.shape[1];ncos=MFPAD_RCL.shape[2]\n",
     "\n",
     "#sum helicities: -cos(theta), phi+180 in photon coordiantes\n",
     "for j in range(12):\n",
     "    for i in range(6):\n",
     "        if j>5:\n",
-    "            MFPAD_RCLCR.append(np.add(MFPAD_RCL_phi.reshape(6,12,-1)[i,j],MFPAD_RCR_phi.reshape(6,12,-1)[5-i,j-6]))\n",
-    "            i+=1\n",
+    "            temp_RCLCR[j,i]=np.add(MFPAD_RCL_phi.reshape(12,6,-1)[j,i],MFPAD_RCR_phi.reshape(12,6,-1)[j-6,5-i])\n",
     "        else:\n",
-    "            MFPAD_RCLCR.append(np.add(MFPAD_RCL_phi.reshape(6,12,-1)[i,j],MFPAD_RCR_phi.reshape(6,12,-1)[5-i,6+j]))\n",
-    "            i+=1\n",
-    "MFPAD_RCLCR=np.array(MFPAD_RCLCR).reshape(72,MFPAD_RCL_phi.shape[1],MFPAD_RCL_phi.shape[2])\n",
+    "            temp_RCLCR[j,i]=np.add(MFPAD_RCL_phi.reshape(12,6,-1)[j,i],MFPAD_RCR_phi.reshape(12,6,-1)[6+j,5-i])\n",
+    "\n",
+    "MFPAD_RCLCR=np.array(temp_RCLCR).reshape(72,nphi,ncos)\n",
     "MFPAD_RCLCR_sum=np.sum(MFPAD_RCLCR, axis=0)\n",
     "\n",
     "#sorting\n",
     "MFPAD_RCLCR_cos=fugi.sorting_array(MFPAD_RCLCR, theory=False, a=1)\n",
     "MFPAD_RCLCR_phi=fugi.sorting_array(MFPAD_RCLCR, theory=False, a=2) #equal to the original!\n",
     "\n",
+    "#reverse the cos of every MFPAD: JUST ALONG COS(theta) -> axis=1\n",
+    "temp1=[]\n",
+    "for el in temp_RCLCR:\n",
+    "    temp1.append(np.flip(el,axis=1))\n",
+    "temp_RCLCR_flip=np.array(temp1).reshape(12,6,-1)\n",
+    "\n",
     "if fileSCL and fileSCR is not None:\n",
-    "    MFPAD_SCLCR=[]\n",
-    "    MFPAD_totordered=[]\n",
-    "    #sum helicities: -cos(theta), phi+180 in photn coordiantes\n",
+    "    temp_SCLCR=np.empty([12,6,648])\n",
+    "    nphi=MFPAD_SCL.shape[1];ncos=MFPAD_SCL.shape[2]\n",
+    "    #sum helicities: -cos(theta), phi+180 in photon coordiantes\n",
     "    for j in range(12):\n",
     "        for i in range(6):\n",
     "            if j>5:\n",
-    "                MFPAD_SCLCR.append(np.add(MFPAD_SCL_phi.reshape(6,12,-1)[i,j],MFPAD_SCR_phi.reshape(6,12,-1)[5-i,j-6]))\n",
-    "                i+=1\n",
+    "                temp_SCLCR[j,i]=np.add(MFPAD_SCL_phi.reshape(12,6,-1)[j,i],MFPAD_SCR_phi.reshape(12,6,-1)[j-6,5-i])\n",
     "            else:\n",
-    "                MFPAD_SCLCR.append(np.add(MFPAD_SCL_phi.reshape(6,12,-1)[i,j],MFPAD_SCR_phi.reshape(6,12,-1)[5-i,6+j]))\n",
-    "                i+=1\n",
-    "    MFPAD_SCLCR=np.array(MFPAD_SCLCR).reshape(72,MFPAD_SCL_phi.shape[1],MFPAD_SCL_phi.shape[2])\n",
+    "                temp_SCLCR[j,i]=np.add(MFPAD_SCL_phi.reshape(12,6,-1)[j,i],MFPAD_SCR_phi.reshape(12,6,-1)[6+j,5-i])\n",
+    "    \n",
+    "    MFPAD_SCLCR=np.array(temp_SCLCR).reshape(72,nphi,ncos)\n",
     "    MFPAD_SCLCR_sum=np.sum(MFPAD_SCLCR, axis=0)\n",
     "\n",
     "    #sorting\n",
-    "    MFPAD_SCLCR_cos=fugi.sorting_array(MFPAD_SCLCR, theory=False, a= 1)\n",
-    "    MFPAD_SCLCR_phi=fugi.sorting_array(MFPAD_SCLCR, theory=False, a= 2) #equal to the original!\n",
+    "    MFPAD_SCLCR_cos=fugi.sorting_array(MFPAD_SCLCR, theory=False, a=1)\n",
+    "    MFPAD_SCLCR_phi=fugi.sorting_array(MFPAD_SCLCR, theory=False, a=2) #equal to the original!\n",
     "    \n",
-    "    #sum enantiomer: -cos(theta) fliped axis=1 cos!, -cos(theta) photon coordinates\n",
-    "    nphi=MFPAD_SCL.shape[1];ncos=MFPAD_SCL.shape[2]\n",
+    "    #sum enantiomer: -cos(theta) fliped axis=1 cos!, -cos(theta) photon coordinates. it shouldn´t be normalized!\n",
     "    for j in range(12):\n",
     "        for i in range(6):\n",
-    "            MFPAD_totordered.append(np.add(MFPAD_SCLCR_phi.reshape(6,12,nphi,ncos)[i,j],np.flip(MFPAD_RCLCR_phi.reshape(6,12,nphi,ncos)[5-i,j], axis=1)))\n",
-    "            i+=1\n",
+    "            temp_totordered1[j,i]=np.add(temp_SCLCR[j,i],temp_RCLCR_flip[j,5-i]) #test on the sum of two enantiomers\n",
+    "            temp_totordered[j,i]=np.add(temp_SCLCR[j,i],temp_RCLCR_flip[j,i])\n",
     "\n",
-    "    MFPAD_totordered=np.array(MFPAD_totordered).reshape(72,MFPAD_SCL.shape[1],MFPAD_SCL.shape[2])\n",
+    "    MFPAD_totordered1=np.array(temp_totordered1).reshape(72,nphi,ncos) #test on the sum of two enantiomers\n",
+    "    MFPAD_totordered=np.array(temp_totordered).reshape(72,nphi,ncos)\n",
     "    \n",
     "    #sorting\n",
     "    MFPAD_totordered_cos=fugi.sorting_array(MFPAD_totordered, theory=False, a=1)\n",
     "    MFPAD_totordered_phi=fugi.sorting_array(MFPAD_totordered, theory=False, a=2) #equal to the original!\n",
     "\n",
-    "    #PECD check it is equal to contrast\n",
-    "    mPECD = np.divide(np.subtract(MFPAD_RCLCR_sum,MFPAD_SCLCR_sum),np.add(MFPAD_RCLCR_sum,MFPAD_SCLCR_sum))\n",
+    "    #PECD check it is equal to contrast; has to be normalized to avoid the contribution of unballanced counts\n",
+    "    MFPAD_RCLCR_sum_norm=fugi.normalise_with_err(MFPAD_RCLCR_sum)\n",
+    "    MFPAD_SCLCR_sum_norm=fugi.normalise_with_err(MFPAD_SCLCR_sum)\n",
+    "    mPECD = np.divide(np.subtract(MFPAD_RCLCR_sum_norm,MFPAD_SCLCR_sum_norm),np.add(MFPAD_RCLCR_sum_norm,MFPAD_SCLCR_sum_norm))\n",
+    "\n",
+    "    #the cos of the single MFPAD has to be reversed: JUST ALONG COS(theta) -> axis=1\n",
+    "    MFPAD_tot_sum_flip=np.flip(MFPAD_tot_sum,axis=1)\n",
+    "    MFPAD_tot_sum_flip_norm=fugi.normalise_with_err(MFPAD_tot_sum_flip)\n",
+    "    # has to be normalized to avoid the contribution of unballanced counts\n",
+    "    mPECD_hires = np.divide(np.subtract(MFPAD_tot_sum_norm,MFPAD_tot_sum_flip_norm),np.add(MFPAD_tot_sum_norm,MFPAD_tot_sum_flip_norm))\n",
     "\n",
     "else:\n",
     "    MFPAD_totordered=MFPAD_RCLCR\n",
+    "    \n",
+    "    #simulates the S enantiomer\n",
+    "    #the cos of every MFPAD has to be reversed JUST ALONG COS(theta) -> axis=1\n",
+    "    temp2=[]\n",
+    "    for el in temp_RCLCR:\n",
+    "        temp2.append(np.flip(el,axis=1))\n",
+    "    \n",
+    "    MFPAD_totordered_flip=np.array(temp2).reshape(72,nphi,ncos)\n",
+    "    \n",
     "    MFPAD_totordered_cos=MFPAD_RCLCR_cos\n",
     "    MFPAD_totordered_phi=MFPAD_RCLCR_phi\n",
-    "    mPECD=np.divide(np.subtract(MFPAD_RCL_sum,MFPAD_RCR_sum),np.add(MFPAD_RCL_sum,MFPAD_RCR_sum))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#COORDIANTES PHOTON ROTATION\n",
-    "#adjusting cosphi with a shifting to have it equal to theory\n",
-    "ctheta_axis_red=ctheta_axis_red[0]; #Ffrom ccos(theta)\n",
     "\n",
-    "phiM=(MFPAD_axis[0][0][1:] + MFPAD_axis[0][0][:-1])/2 #phi = (36,), MFPAD_axis = (37,)\n",
-    "cosM=(MFPAD_axis[0][1][1:] + MFPAD_axis[0][1][:-1])/2 #COS = (36,), MFPAD_axis = (37,)\n",
-    "\n",
-    "print(\"MFPAD_xy shape = \", MFPAD_axis[0][0].shape)\n",
-    "print(\"phiM shape = \", phiM.shape)\n",
-    "print(\"cosM shape = \", cosM.shape)"
+    "    #PECD check it is equal to contrast; has to be normalized to avoid the contribution of unballanced counts\n",
+    "    MFPAD_totordered_norm=fugi.normalise_with_err(MFPAD_totordered)\n",
+    "    MFPAD_totordered_flip_norm=fugi.normalise_with_err(MFPAD_totordered_flip)\n",
+    "    mPECD=np.divide(np.subtract(MFPAD_totordered_nrom,MFPAD_totordered_flip_norm),np.add(MFPAD_totordered_norm,MFPAD_totordered_flip_norm))"
    ]
   },
   {
@@ -1060,9 +1045,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "name": "python388jvsc74a57bd00314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1074,7 +1058,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.8"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "0314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+   }
   }
  },
  "nbformat": 4,
