apha and phi modified

--- a/b1_map.ipynb
+++ b/b1_map.ipynb
@@ -454,8 +454,8 @@
     "\n",
     "    ax.set_title(\"S CR-CL b1 map \"+en)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_xlabel('phi [DEG]')\n",
-    "    ax.set_ylabel('cos(theta) [adm]')\n",
+    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_aspect(aspect)\n",
     "\n",
     "    # cbar = fugi.clippedcolorbar(cs,shrink=0.9, ax=cs)\n",
@@ -491,12 +491,12 @@
     "        cs,ax=fugi.plot_interpolation(xgo_uniq,ygo_uniq,param_matrix_cos[:,i,0].reshape(6,12), ax=ax, cmap=cmap_temp)\n",
     "        # cs,ax=fugi.plot_interpolation(np.flip(xgo_uniq),ygo_uniq,param_matrix_cos[:,i,0], ax=ax, cmap=cmap_temp)\n",
     "        aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "        ax.set_ylabel('cos(theta) [adm]')\n",
+    "        ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "        ax.set_aspect(aspect)\n",
     "        cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "        cbar.ax.set_ylabel('asymmetry')\n",
     "        if i==5:\n",
-    "            ax.set_xlabel('phi [DEG]')\n",
+    "            ax.set_xlabel('\\u03D5 [DEG]')\n",
     "\n",
     "    fig.tight_layout()\n",
     "\n",
@@ -615,8 +615,8 @@
     "\n",
     "ax.set_title(\"R CR-CL b1 map \"+en)\n",
     "aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "ax.set_xlabel('phi [DEG]')\n",
-    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
     "# cbar = fugi.clippedcolorbar(cs,shrink=0.9, ax=cs)\n",
@@ -650,12 +650,12 @@
     "for ax,i in zip(axes,range(6)):\n",
     "    cs,ax=fugi.plot_interpolation(xgo_uniq,ygo_uniq,param_matrix_cos[:,i,0].reshape(6,12), ax=ax, cmap=cmap_temp)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_ylabel('cos(theta) [adm]')\n",
+    "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_aspect(aspect)\n",
     "    cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "    cbar.ax.set_ylabel('')\n",
     "    if i==5:\n",
-    "        ax.set_xlabel('phi [DEG]')\n",
+    "        ax.set_xlabel('\\u03D5 [DEG]')\n",
     "\n",
     "fig.tight_layout()\n",
     "\n",
@@ -843,8 +843,8 @@
     "\n",
     "    ax.set_title(\"R-S b1 map \"+en)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_xlabel('phi [DEG]')\n",
-    "    ax.set_ylabel('cos(theta) [adm]')\n",
+    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_aspect(aspect)\n",
     "\n",
     "    # cbar = fugi.clippedcolorbar(cs,shrink=0.9, ax=cs)\n",
@@ -878,12 +878,12 @@
     "    for ax,i in zip(axes,range(6)):\n",
     "        cs,ax=fugi.plot_interpolation(xgo_uniq,ygo_uniq,param_matrix_phi_tot[:,i,0].reshape(12,6).T, ax=ax, cmap=cmap_temp)\n",
     "        aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "        ax.set_ylabel('cos(theta) [adm]')\n",
+    "        ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "        ax.set_aspect(aspect)\n",
     "        cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "        cbar.ax.set_ylabel('asymmetry')\n",
     "        if i==5:\n",
-    "            ax.set_xlabel('phi [DEG]')\n",
+    "            ax.set_xlabel('\\u03D5 [DEG]')\n",
     "\n",
     "    fig.tight_layout()\n",
     "\n",
@@ -944,8 +944,8 @@
     "\n",
     "    ax.set_title(\"R-S b1 map \"+en)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_xlabel('phi [DEG]')\n",
-    "    ax.set_ylabel('cos(theta) [adm]')\n",
+    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_aspect(aspect)\n",
     "\n",
     "    # cbar = fugi.clippedcolorbar(cs,shrink=0.9, ax=cs)\n",
