--- a/72_2D_MFPADs_experiment.ipynb
+++ b/72_2D_MFPADs_experiment.ipynb
@@ -353,8 +353,8 @@
    "source": [
     "#smart flipping for the single 72 MFPAD image. Has to be in phi because of the structure of reshape, do the cos just as a check\n",
     "temp_RCLCR=np.empty([12,6,648])\n",
-    "temp_SCLCR=np.empty([12,6,648])\n",
-    "temp_totordered_phi=np.empty([12,6,648])\n",
+    "temp_totordered=np.empty([12,6,648])\n",
+    "temp_totordered1=np.empty([12,6,648]) #test on the sum of two enantiomers\n",
     "\n",
     "nphi=MFPAD_RCL.shape[1];ncos=MFPAD_RCL.shape[2]\n",
     "\n",
@@ -380,8 +380,7 @@
     "temp_RCLCR_flip=np.array(temp1).reshape(12,6,-1)\n",
     "\n",
     "if fileSCL and fileSCR is not None:\n",
-    "    temp_SCLCR=[]\n",
-    "    temp_totordered=[]\n",
+    "    temp_SCLCR=np.empty([12,6,648])\n",
     "    nphi=MFPAD_SCL.shape[1];ncos=MFPAD_SCL.shape[2]\n",
     "    #sum helicities: -cos(theta), phi+180 in photon coordiantes\n",
     "    for j in range(12):\n",
@@ -391,18 +390,20 @@
     "            else:\n",
     "                temp_SCLCR[j,i]=np.add(MFPAD_SCL_phi.reshape(12,6,-1)[j,i],MFPAD_SCR_phi.reshape(12,6,-1)[6+j,5-i])\n",
     "    \n",
-    "    MFPAD_SCLCR=np.array(MFPAD_SCLCR).reshape(72,nphi,ncos)\n",
+    "    MFPAD_SCLCR=np.array(temp_SCLCR).reshape(72,nphi,ncos)\n",
     "    MFPAD_SCLCR_sum=np.sum(MFPAD_SCLCR, axis=0)\n",
     "\n",
     "    #sorting\n",
     "    MFPAD_SCLCR_cos=fugi.sorting_array(MFPAD_SCLCR, theory=False, a=1)\n",
     "    MFPAD_SCLCR_phi=fugi.sorting_array(MFPAD_SCLCR, theory=False, a=2) #equal to the original!\n",
     "    \n",
-    "    #sum enantiomer: -cos(theta) fliped axis=1 cos!, -cos(theta) photon coordinates\n",
+    "    #sum enantiomer: -cos(theta) fliped axis=1 cos!, -cos(theta) photon coordinates. it shouldn´t be normalized!\n",
     "    for j in range(12):\n",
     "        for i in range(6):\n",
-    "            temp_totordered[j,i]=np.add(temp_SCLCR[j,i],temp_RCLCR_flip[j,5-i])\n",
+    "            temp_totordered1[j,i]=np.add(temp_SCLCR[j,i],temp_RCLCR_flip[j,5-i]) #test on the sum of two enantiomers\n",
+    "            temp_totordered[j,i]=np.add(temp_SCLCR[j,i],temp_RCLCR_flip[j,i])\n",
     "\n",
+    "    MFPAD_totordered1=np.array(temp_totordered1).reshape(72,nphi,ncos) #test on the sum of two enantiomers\n",
     "    MFPAD_totordered=np.array(temp_totordered).reshape(72,nphi,ncos)\n",
     "    \n",
     "    #sorting\n",
@@ -471,9 +472,9 @@
     "fugi = reload(fugi)\n",
     "\n",
     "fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=(15,4))\n",
-    "ax1.contourf(phiM,cosM,MFPAD_RCR[0].T)\n",
+    "ax1.contourf(phiM,cosM,MFPAD_RCR[71].T)\n",
     "# ax2.contourf(phiM,cosM,MFPAD_RCR_flip[0].T)\n",
-    "cs,ax2=fugi.plot_interpolation(phiM,cosM,MFPAD_RCR[0].T, ax=ax2, kind=\"linear\", xstep=30, ystep=0.1, n=8)\n",
+    "cs,ax2=fugi.plot_interpolation(phiM,cosM,MFPAD_RCR[71].T, ax=ax2, kind=\"linear\", xstep=30, ystep=0.1, n=8)\n",
     "ax3.contourf(phiM,cosM,MFPAD_tottest)\n",
     "\n",
     "# MFPAD_SCL_flip_cos[45]==np.flip(np.flip(MFPAD_SCL_cos[45],axis=1),axis=0) #True"
@@ -510,8 +511,8 @@
     "    # fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "    fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
-    "    #NOTE for phi ordered the scannig order of axis has to be inverted\n",
-    "    for i,ax in zip(range(72),axes.T.ravel()) :\n",
+    "    #NOTE for cos ordered the scannig order of axis has to be np.flip(axes.T,axis=1).ravel()\n",
+    "    for i,ax in enumerate(np.flip(axes.T,axis=1).ravel()):\n",
     "        #old adding up\n",
     "        # ax.contourf(phiM,cosM,fugi.smoothgauss(MFPAD_SCLCR_phi[i],0.3,0.6).T, levels=5)\n",
     "        cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_SCLCR_phi[i].T, ax=ax, kind=\"linear\", xstep=5, ystep=0.05, n=15)\n",
@@ -532,8 +533,8 @@
     "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
-    "#NOTE for phi ordered the scannig order of axis has to be inverted\n",
-    "for i,ax in zip(range(72),axes.T.ravel()) :\n",
+    "#NOTE for cos ordered the scannig order of axis has to be np.flip(axes.T,axis=1).ravel()\n",
+    "for i,ax in enumerate(np.flip(axes.T,axis=1).ravel()):\n",
     "    #old adding up\n",
     "    # ax.contourf(phiM,cosM,fugi.smoothgauss(MFPAD_RCLCR_phi[i],0.3,0.6).T)\n",
     "    cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_RCLCR_phi[i].T, ax=ax, kind=\"linear\", xstep=5, ystep=0.05, n=15)\n",
@@ -556,8 +557,8 @@
     "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
-    "#NOTE for phi ordered the scannig order of axis has to be inverted\n",
-    "for i,ax in zip(range(72),axes.T.ravel()) :\n",
+    "#NOTE for cos ordered the scannig order of axis has to be np.flip(axes.T,axis=1).ravel()\n",
+    "for i,ax in enumerate(np.flip(axes.T,axis=1).ravel()):\n",
     "    # ax.contourf(phiM,cosM,fugi.smoothgauss(MFPAD_totordered_phi[i],0.3,0.6).T)\n",
     "    cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_totordered_phi[i].T, ax=ax, kind=\"linear\", xstep=5, ystep=0.05, n=15)\n",
     "    ax.tick_params(labelsize=12)\n",
@@ -578,8 +579,10 @@
     "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
-    "#NOTE for phi ordered the scannig order of axis has to be inverted\n",
-    "for i,ax in zip(range(72),axes.T.ravel()) :\n",
+    "#NOTE for cos ordered the scannig order of axis has to be np.flip(axes.T,axis=1).ravel()\n",
+    "# for i,ax in enumerate(axes.ravel()):\n",
+    "for i,ax in enumerate(np.flip(axes.T,axis=1).ravel()):\n",
+    "\n",
     "    # ax.contourf(phiM,cosM,fugi.smoothgauss(MFPAD_totordered_phi[i],0.3,0.6).T, cmap=cmap_temp)\n",
     "    cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_totordered_phi[i].T, ax=ax, cmap=cmap_temp, kind=\"linear\", xstep=5, ystep=0.05, n=15)\n",
     "    ax.tick_params(labelsize=12)\n",
@@ -600,10 +603,10 @@
     "#fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
-    "#NOTE for phi ordered the scannig order of axis has to be inverted\n",
-    "for i,ax in zip(range(72),axes.T.ravel()) :\n",
+    "#NOTE for cos ordered the scannig order of axis has to be np.flip(axes.T,axis=1).ravel()\n",
+    "for i,ax in enumerate(np.flip(axes.T,axis=1).ravel()):\n",
     "    # ax.contourf(phiM,cosM,MFPAD_totordered_phi[i].T, cmap=cmap_temp)\n",
-    "    cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_totordered_phi[i].T, ax=ax, cmap=cmap_temp, kind=\"linear\", xstep=5, ystep=0.05, n=15)\n",
+    "    cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_totordered1[i].T, ax=ax, cmap=cmap_temp, kind=\"linear\", xstep=5, ystep=0.05, n=15)\n",
     "    ax.tick_params(labelsize=12)\n",
     "    ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
     "\n",
@@ -622,14 +625,15 @@
     "    #fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "    fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
-    "    for i,ax in zip(range(72),axes.ravel()) :\n",
+    "    #NOTE for cos ordered the scannig order of axis has to be np.flip(axes.T,axis=1).ravel()\n",
+    "    for i,ax in enumerate(axes.ravel()):\n",
     "        # ax.contourf(phiM,cosM,MFPAD_SCR_cos[i].T)\n",
     "        cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_SCR_cos[i].T, ax=ax, kind=\"linear\", xstep=5, ystep=0.05, n=15)\n",
     "        ax.tick_params(labelsize=12)\n",
     "        #ax.text(0, 0, cosphi_adj_cos[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
     "\n",
     "    fugi.overlaygraph(fig)\n",
-    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/72MFPAD_\"+CH+\"_\"+en+\"_SCR_cos_exp.png\", dpi=300, transparent=False)\n",
+    "    # fig.savefig(\"../PYTHON_graphs/OUTPUTS/72MFPAD_\"+CH+\"_\"+en+\"_SCR_cos_exp.png\", dpi=300, transparent=False)\n",
     "    plt.show()"
    ]
   },
@@ -647,7 +651,8 @@
     "    fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "    # aspect=(phiM.max()/cosM.max())\n",
     "\n",
-    "    for i,ax in zip(range(72),axes.ravel()):\n",
+    "    #NOTE for cos ordered the scannig order of axis has to be np.flip(axes.T,axis=1).ravel()\n",
+    "    for i,ax in enumerate(axes.ravel()):\n",
     "        # cs=ax.contourf(phiM,cosM,MFPAD_SCL_cos[i].T)\n",
     "        cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_SCL_cos[i].T, ax=ax, kind=\"linear\", xstep=5, ystep=0.05, n=15)\n",
     "        ax.tick_params(labelsize=12)\n",
@@ -656,7 +661,7 @@
     "\n",
     "    fugi.overlaygraph(fig)#, title=\"MFPAD SCL\")\n",
     "    # fig.colorbar(cs, ax=axes.ravel().tolist())\n",
-    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/72MFPAD_\"+CH+\"_\"+en+\"_SCL_cos_exp.png\", dpi=300, transparent=False)\n",
+    "    # fig.savefig(\"../PYTHON_graphs/OUTPUTS/72MFPAD_\"+CH+\"_\"+en+\"_SCL_cos_exp.png\", dpi=300, transparent=False)\n",
     "    plt.show()"
    ]
   },
@@ -670,8 +675,8 @@
     "    #fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "    fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
-    "    #NOTE for phi ordered the scannig order of axis has to be inverted\n",
-    "    for i,ax in zip(range(72),axes.T.ravel()) :\n",
+    "    #NOTE for cos ordered the scannig order of axis has to be np.flip(axes.T,axis=1).ravel()\n",
+    "    for i,ax in enumerate(np.flip(axes.T,axis=1).ravel()):\n",
     "        # ax.contourf(phiM,cosM,MFPAD_SCR_phi[i].T)\n",
     "        cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_SCR_phi[i].T, ax=ax, kind=\"linear\", xstep=5, ystep=0.05, n=15)\n",
     "        ax.tick_params(labelsize=12)\n",
@@ -692,8 +697,8 @@
     "    #fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "    fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
-    "    #NOTE for phi ordered the scannig order of axis has to be inverted\n",
-    "    for i,ax in zip(range(72),axes.T.ravel()) :\n",
+    "    #NOTE for cos ordered the scannig order of axis has to be np.flip(axes.T,axis=1).ravel()\n",
+    "    for i,ax in enumerate(np.flip(axes.T,axis=1).ravel()):\n",
     "        # ax.contourf(phiM,cosM,MFPAD_SCL_phi[i].T)\n",
     "        cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_SCL_phi[i].T, ax=ax, kind=\"linear\", xstep=5, ystep=0.05, n=15)\n",
     "        ax.tick_params(labelsize=12)\n",
@@ -713,7 +718,8 @@
     "#fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
-    "for i,ax in zip(range(72),axes.ravel()) :\n",
+    "#NOTE for cos ordered the scannig order of axis has to be np.flip(axes.T,axis=1).ravel()\n",
+    "for i,ax in enumerate(axes.ravel()):\n",
     "    # ax.imshow(fugi.smoothgauss(MFPAD_RCR_cos[i],0.3,0.6).T, extent=[phiM[0],phiM[-1],cosM[0],cosM[-1]], interpolation='quadric', cmap=\"viridis\", aspect=\"auto\")\n",
     "    cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_RCR_cos[i].T, ax=ax, kind=\"linear\", xstep=5, ystep=0.05, n=15)\n",
     "    ax.tick_params(labelsize=12)\n",
@@ -733,8 +739,8 @@
     "#fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
-    "#NOTE for phi ordered the scannig order of axis has to be inverted\n",
-    "for i,ax in zip(range(72),axes.T.ravel()) :\n",
+    "#NOTE for cos ordered the scannig order of axis has to be np.flip(axes.T,axis=1).ravel()\n",
+    "for i,ax in enumerate(np.flip(axes.T,axis=1).ravel()):\n",
     "    # ax.contourf(phiM,cosM,MFPAD_RCR_phi[i].T)\n",
     "    cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_RCR_phi[i].T, ax=ax, kind=\"linear\", xstep=5, ystep=0.05, n=15)\n",
     "    ax.tick_params(labelsize=12)\n",
@@ -754,8 +760,8 @@
     "#fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
-    "#NOTE for phi ordered the scannig order of axis has to be inverted\n",
-    "for i,ax in zip(range(72),axes.T.ravel()) :\n",
+    "#NOTE for cos ordered the scannig order of axis has to be np.flip(axes.T,axis=1).ravel()\n",
+    "for i,ax in enumerate(axes.ravel()):\n",
     "    # ax.contourf(phiM,cosM,MFPAD_RCL_phi[i].T)\n",
     "    cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_RCL_cos[i].T, ax=ax, kind=\"linear\", xstep=5, ystep=0.05, n=15)\n",
     "    ax.tick_params(labelsize=12)\n",
@@ -776,13 +782,13 @@
     "    MFPAD_SCL_sum_n2=fugi.normalise_with_err(MFPAD_SCL_sum,normtype=2)\n",
     "    fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "    # cs=ax.contourf(phiM,cosM,MFPAD_SCL_sum_n2.T, cmap=cmap_temp, levels=20)\n",
-    "    cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_SCL_sum_n2.T, ax=ax, cmap=cmap_temp, xstep=1, ystep=0.01)\n",
+    "    cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_SCL_sum_n2.T, ax=ax, cmap=cmap_temp, xstep=1, ystep=0.01, n=20)\n",
     "\n",
     "    ax.set_title(\"SCL tot MFPAD n2 \"+CH+\"_\"+en)\n",
     "\n",
     "    aspect=(phiM.max()/cosM.max())\n",
-    "    ax.set_xlabel('phi [DEG]')\n",
-    "    ax.set_ylabel('cos(theta) [adm]')\n",
+    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
     "    cbar.set_ticks([MFPAD_SCL_sum_n2.min(),MFPAD_SCL_sum_n2.max()])\n",
     "    cbar.set_ticklabels([\"min\",\"max\"])\n",
@@ -801,12 +807,12 @@
     "if fileSCL and fileSCR is not None:\n",
     "    fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "    # cs=ax.contourf(phiM,cosM,MFPAD_tot_sum.T, cmap=cmap_temp, levels=20)\n",
-    "    cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_tot_sum.T, ax=ax, cmap=cmap_temp, xstep=1, ystep=0.01)\n",
+    "    cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_tot_sum.T, ax=ax, cmap=cmap_temp, xstep=1, ystep=0.01, n=20)\n",
     "    ax.set_title(\"total MFPAD \"+CH+\"_\"+en)\n",
     "\n",
     "    aspect=(phiM.max()/cosM.max())\n",
-    "    ax.set_xlabel('phi [DEG]')\n",
-    "    ax.set_ylabel('cos(theta) [adm]')\n",
+    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
     "    cbar.set_ticks([MFPAD_tot_sum.min(),MFPAD_tot_sum.max()])\n",
     "    cbar.set_ticklabels([\"min\",\"max\"])\n",
@@ -924,13 +930,13 @@
     "ax[1].set_xlabel('phi [DEG]')\n",
     "# fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax[1])\n",
     "ax[1].set_aspect(aspect)\n",
-    "cbar = fig.colorbar(cs1, ax=ax[1],shrink=0.9)\n",
+    "# cbar = fig.colorbar(cs1, ax=ax[1],shrink=0.9)\n",
     "# cbar.set_ticks([MFPAD_SCL_sum_n2.min(),MFPAD_SCL_sum_n2.max()])\n",
     "# cbar.set_ticklabels([\"min\",\"max\"])\n",
     "# cbar.ax.set_ylabel('normalised counts')\n",
     "\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/total_MFPAD_sum_R_test_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/total_MFPAD_sum_R_test_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
    ]
   },
   {
@@ -941,12 +947,12 @@
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "# cs=ax.contourf(phiM,cosM,MFPAD_tot_sum.T, cmap=cmap_temp, levels=15)\n",
-    "cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_tot_sum.T, ax=ax, cmap=cmap_temp, xstep=1, ystep=0.01)\n",
+    "cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_tot_sum.T, ax=ax, cmap=cmap_temp, xstep=1, ystep=0.01, n=20)\n",
     "ax.set_title(\"MFPAD single sum \"+CH+\"_\"+en)\n",
     "\n",
     "aspect=(phiM.max()/cosM.max())\n",
-    "ax.set_xlabel('phi [DEG]')\n",
-    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
     "cbar.set_ticks([MFPAD_tot_sum.min(),MFPAD_tot_sum.max()])\n",
     "cbar.set_ticklabels([\"min\",\"max\"])\n",
@@ -1023,8 +1029,8 @@
     "ax.set_title(\"contrast map \"+CH+\"_\"+en)\n",
     "\n",
     "aspect=(phiM.max()/cosM.max())\n",
-    "ax.set_xlabel('phi [DEG]')\n",
-    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
     "# cbar.set_ticklabels([\"min\",\"max\"])\n",
     "# cbar.set_ticks([totMFPAD.min(),totMFPAD.max()])\n",
@@ -1047,8 +1053,8 @@
     "    ax.set_title(\"contrast map \"+CH+\"_\"+en)\n",
     "\n",
     "    aspect=(phiM.max()/cosM.max())\n",
-    "    ax.set_xlabel('phi [DEG]')\n",
-    "    ax.set_ylabel('cos(theta) [adm]')\n",
+    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
     "    # cbar.set_ticklabels([\"min\",\"max\"])\n",
     "    # cbar.set_ticks([totMFPAD.min(),totMFPAD.max()])\n",
