--- a/N2_calibration.ipynb
+++ b/N2_calibration.ipynb
@@ -143,10 +143,16 @@
    "outputs": [],
    "source": [
     "#3D MFPAD\n",
+    "from scipy.ndimage.filters import gaussian_filter\n",
+    "Yn, Xn = np.meshgrid(ctheta_mol, phi_mol2D)\n",
+    "\n",
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "aspect=(phi_mol1D.max()/ctheta_mol.max())\n",
     "# cs=ax.contourf(phi_mol2D,ctheta_mol,MFPAD3D.T,cmap=cmap_temp)\n",
     "cs=ax.pcolormesh(phi_mol2D,ctheta_mol,MFPAD3D.T,shading='gouraud', cmap=cmap_temp)\n",
+    "ax.contour(Xn, Yn, gaussian_filter(MFPAD3D, 1.), 15, colors='k', alpha=0.15)\n",
+    "#too much computational intensive\n",
+    "# cs,ax=fugi.plot_interpolation(phi_mol2D,ctheta_mol,MFPAD3D.T,ax=ax, xstep=1, ystep=0.05, cmap=cmap_temp)\n",
     "\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
     "\n",
@@ -200,7 +206,7 @@
     "\n",
     "cax = fig.add_axes([1.02, 0.20, 0.01, 0.58])\n",
     "cbar = fig.colorbar(cs3,shrink=0.9, cax=cax)\n",
-    "cbar.set_ticks([np.ma.masked_array(p_rel_xy.T,p_rel_xy.T<3.min(),p_rel_xz.max()])\n",
+    "cbar.set_ticks([np.ma.masked_array(p_rel_xy.T,p_rel_xy.T<3).min(),p_rel_xz.max()])\n",
     "cbar.set_ticklabels([\"min\",\"max\"])\n",
     "cbar.ax.set_ylabel('normalized counts')\n",
     "\n",
@@ -374,7 +380,12 @@
   },
   "language_info": {
    "name": "python",
-   "version": ""
+   "version": "3.8.8"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "0314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+   }
   }
  },
  "nbformat": 4,
